--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -12,6 +12,12 @@
       "emoji": "🍎",
       "description": "A grocery list app hosted in Firebase using a noSQL database and simple AI categorization",
       "url": "https://groceries.cortlan.co"
+    },
+    {
+      "name": "Google JWT Plugin for Insomnia",
+      "emoji": "🔌", 
+      "description": "Plugin for Insomnia that creates an OICD token for calling your services behind IAP using a sevice account credentials",
+      "url": "https://github.com/cortl/insomnia-plugin-googlejwt"
     }
   ]
 }
