--- a/package.json
+++ b/package.json
@@ -2,8 +2,22 @@
   "name": "personal-site",
   "private": true,
   "description": "Cortlan's personal site",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Cortlan Bainbridge <hello@cortlan.dev>",
+  "keywords": [
+    "gatsby",
+    "cortl",
+    "personal-site"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "start": "npm run develop",
+    "format": "prettier --write \"src/**/*.js\"",
+    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+  },
+  "precommit": "pretty-quick --staged",
   "dependencies": {
     "firebase-tools": "^6.2.2",
     "gatsby": "^2.13.27",
@@ -15,7 +29,6 @@
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-json": "^2.2.2",
-    "gatsby-transformer-sharp": "^2.2.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -25,19 +38,10 @@
     "typography": "^0.16.19",
     "typography-theme-funston": "^0.16.19"
   },
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "start": "npm run develop",
-    "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
-  },
   "devDependencies": {
-    "prettier": "^1.15.2"
+    "husky": "^3.0.1",
+    "prettier": "^1.15.2",
+    "pretty-quick": "^1.11.1"
   },
   "repository": {
     "type": "git",
