--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "format": "prettier --write \"src/**/*.js\"",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
-  "precommit": "pretty-quick --staged",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format"
+    }
+  },
   "dependencies": {
     "firebase-tools": "^6.2.2",
     "gatsby": "^2.13.27",
@@ -40,8 +44,7 @@
   },
   "devDependencies": {
     "husky": "^3.0.1",
-    "prettier": "^1.15.2",
-    "pretty-quick": "^1.11.1"
+    "prettier": "^1.15.2"
   },
   "repository": {
     "type": "git",
