--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format"
+      "pre-commit": "pretty-quick --staged --pattern \"src/**/*.js\""
     }
   },
   "dependencies": {
@@ -44,7 +44,8 @@
   },
   "devDependencies": {
     "husky": "^3.0.1",
-    "prettier": "^1.15.2"
+    "prettier": "^1.15.2",
+    "pretty-quick": "^1.11.1"
   },
   "repository": {
     "type": "git",
