--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,32 +2,30 @@
   "file": "projects",
   "projects" : [
     {
-      "name": "Facebook T-Shirt Generator",
-      "emoji": "👕",
-      "description": "A satirical foray into SSR React.js sites",
-      "url": "https://tshirts.cortlan.dev"
-    },
-    {
       "name": "Groceries",
       "emoji": "🍎",
+      "emojiDescription": "apple",
       "description": "A grocery list app hosted in Firebase using a noSQL database and simple AI categorization",
       "url": "https://groceries.cortlan.dev"
     },
     {
       "name": "Google JWT Plugin for Insomnia",
       "emoji": "🔌", 
+      "emojiDescription": "plug",
       "description": "Plugin for Insomnia that creates an OICD token for calling your services behind IAP using a sevice account credentials",
       "url": "https://github.com/cortl/insomnia-plugin-googlejwt"
     },
     {
       "name": "Ratings",
       "emoji": "🎞",
+      "emojiDescription": "film",
       "description": "Web application built using Vue.js and Express that displays visualizations for TV shows.  Built on top of my express-gcp project",
       "url": "https://ratings.cortlan.dev"
     },
     {
       "name": "Express GCP",
       "emoji": "🐣",
+      "emojiDescription": "baby chicken",
       "description": "Bootstrap project for a Express/Node application running on Google's App Engine",
       "url": "https://github.com/cortl/express-gcp"
     }
