--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-site",
   "private": true,
   "description": "Cortlan's personal site",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "Cortlan Bainbridge <hello@cortlan.dev>",
   "keywords": [
     "gatsby",
@@ -14,8 +14,7 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "format": "prettier --write \"src/**/*.js\"",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+    "format": "prettier --write \"src/**/*.js\""
   },
   "husky": {
     "hooks": {
@@ -23,35 +22,35 @@
     }
   },
   "dependencies": {
-    "firebase-tools": "^7.6.2",
-    "gatsby": "^2.13.27",
-    "gatsby-image": "^2.2.6",
-    "gatsby-plugin-manifest": "^2.2.3",
-    "gatsby-plugin-offline": "^3.0.17",
-    "gatsby-plugin-react-helmet": "^3.1.2",
-    "gatsby-plugin-sharp": "^2.2.8",
-    "gatsby-plugin-typography": "^2.3.2",
-    "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-json": "^2.2.2",
+    "firebase-tools": "^8.11.2",
+    "gatsby": "^2.24.67",
+    "gatsby-image": "^2.4.20",
+    "gatsby-plugin-manifest": "^2.4.33",
+    "gatsby-plugin-offline": "^3.2.30",
+    "gatsby-plugin-react-helmet": "^3.3.12",
+    "gatsby-plugin-sharp": "^2.6.38",
+    "gatsby-plugin-typography": "^2.5.12",
+    "gatsby-source-filesystem": "^2.3.32",
+    "gatsby-transformer-json": "^2.4.13",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-skeleton-css": "^1.1.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
     "typography-theme-funston": "^0.16.19"
   },
   "devDependencies": {
-    "husky": "^3.0.1",
-    "prettier": "^1.15.2",
-    "pretty-quick": "^2.0.0"
+    "husky": "^4.3.0",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.0.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/cortl/personal-site"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/cortl/personal-site/issues"
   }
 }
