--- a/package.json
+++ b/package.json
@@ -14,37 +14,33 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "format": "prettier --write \"src/**/*.js\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged --pattern \"src/**/*.js\""
-    }
+    "format": "prettier --write \"src/**/*.js\"",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "firebase-tools": "^8.15.1",
-    "gatsby": "^2.25.3",
-    "gatsby-image": "^2.4.20",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-offline": "^3.2.30",
-    "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-plugin-typography": "^2.5.12",
-    "gatsby-source-filesystem": "^2.3.32",
-    "gatsby-transformer-json": "^2.4.13",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "firebase-tools": "^10.0.1",
+    "gatsby": "^4.4.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-offline": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-sharp": "^4.4.0",
+    "gatsby-plugin-typography": "^4.4.0",
+    "gatsby-source-filesystem": "^4.4.0",
+    "gatsby-transformer-json": "^4.4.0",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-skeleton-css": "^1.1.0",
     "react-typography": "^0.16.19",
-    "typography": "^0.16.19",
+    "typography": "^0.16.20",
     "typography-theme-funston": "^0.16.19"
   },
   "devDependencies": {
-    "husky": "^4.3.0",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.0.2"
+    "husky": "^7.0.4",
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.3"
   },
   "repository": {
     "type": "git",
