--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,20 +6,16 @@ version: 2
 jobs:
   build:
     docker: 
-      - image: circleci/node:12.0
+      - image: cimg/node:lts
 
     working_directory: ~/repo
 
     steps:
       - checkout
       
-      # Download and cache dependencies
       - restore_cache:
           keys:
-            # Find a cache corresponding to this specific package-lock.json checksum
-            # when this file is changed, this key will fail
             - v1-npm-deps-{{ checksum "package-lock.json" }}
-            # Find the most recently generated cache used from any branch
             - v1-npm-deps-
       
       - run:
